# cosc363

./: .gitignore
assignment/: CMakeLists.txt  SkyboxTexture.cpp  SkyboxTexture.h  assignment.cpp  glider.off  loadBMP.h  loadTGA.h  report.docx
assignment/textures/: fire.tga
assignment1/: CMakeLists.txt  assignment.cpp
assignment1/textures/: fire.tga
assignment2/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  RayTracer.cpp  Torus.cpp  Torus.h  report.docx  roots3and4.c
labs/build-lab1-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  Model3d.out  Teapot.out  build.ninja  cmake_install.cmake  lab1.cbp  rules.ninja
labs/build-lab2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Cannon.out  Humanoid.out  build.ninja  cmake_install.cmake  lab2.cbp  rules.ninja
labs/build-lab2-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  Cannon.out  Humanoid.out  build.ninja  cmake_install.cmake  lab2.cbp  rules.ninja
labs/build-lab3-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  RailWagon.out  Train.out  Yard.out  build.ninja  cmake_install.cmake  lab3.cbp  rules.ninja
labs/build-lab4-Desktop-Default/: .ninja_deps  .ninja_log  Boat.out  CMakeCache.txt  Vase.out  build.ninja  cmake_install.cmake  lab4.cbp  rules.ninja
labs/lab1/: Model3D.cpp  Octahedron.off  Sphere.off  Teapot.cpp
labs/lab10/III_TerrainPatches/: TerrainPatches.cont  TerrainPatches.cpp  TerrainPatches.eval  TerrainPatches.vert
labs/lab10/II_TeapotPatches/: TeapotPatch.eval  TeapotPatches.cpp
labs/lab10/I_CubePatches/: CubePatches.cont  CubePatches.cpp  CubePatches.eval  CubePatches.vert
labs/lab2/: Cannon.cpp  Humanoid.cpp
labs/lab3/: CMakeLists.txt  RailWagon.cpp  Train.cpp  Yard.cpp  gradient.tga
labs/lab4/: Boat.cpp  CMakeLists.txt  DevIL_Test.cpp  Vase.cpp  loadBMP.h
labs/lab7/: CMakeLists.txt  RayTracer.cpp  Sphere.cpp
labs/lab8/: CMakeLists.txt  RayTracer.cpp
labs/lab9/II_Cube/: Cube.cpp  Cube.frag
labs/lab9/I_Seashell/: Seashell.cpp  (+2 more)
labs/teapot-demo/: CMakeLists.txt  main.cpp
misc/: CMakeLists.txt  main.cpp
